--- a/Languages/English/Keyed/EntityDatabaseAnomaly.xml
+++ b/Languages/English/Keyed/EntityDatabaseAnomaly.xml
@@ -4,7 +4,7 @@
 	<AnomaliesExpected.EntityDatabaseAnomaly.Active>{0} emitted a psychic pulse of strength {1}</AnomaliesExpected.EntityDatabaseAnomaly.Active>
 	<AnomaliesExpected.EntityDatabaseAnomaly.Selected>Selected entity: {0}</AnomaliesExpected.EntityDatabaseAnomaly.Selected>
 	<AnomaliesExpected.EntityDatabaseAnomaly.Dialog.Label>Access Database</AnomaliesExpected.EntityDatabaseAnomaly.Dialog.Label>
-	<AnomaliesExpected.EntityDatabaseAnomaly.Dialog.Desc>Open database to select entity as a target</AnomaliesExpected.EntityDatabaseAnomaly.Dialog.Desc>
+	<AnomaliesExpected.EntityDatabaseAnomaly.Dialog.Desc>Open database to select entity as a target for ritual.</AnomaliesExpected.EntityDatabaseAnomaly.Dialog.Desc>
 	
 	<AnomaliesExpected.EntityDatabaseAnomaly.Ritual.OutputDesc>\n{0} entity will be provoked.</AnomaliesExpected.EntityDatabaseAnomaly.Ritual.OutputDesc>
 	<AnomaliesExpected.EntityDatabaseAnomaly.Ritual.MissingEntityDatabase>Missing Entity Database for ritual.</AnomaliesExpected.EntityDatabaseAnomaly.Ritual.MissingEntityDatabase>
