--- a/Languages/English/Keyed/Speedometer.xml
+++ b/Languages/English/Keyed/Speedometer.xml
@@ -9,4 +9,7 @@
 	<AnomaliesExpected.Speedometer.TakeOff>Take off {0}?</AnomaliesExpected.Speedometer.TakeOff>
 	<AnomaliesExpected.Speedometer.TakeOff.Label>Take off</AnomaliesExpected.Speedometer.TakeOff.Label>
 	<AnomaliesExpected.Speedometer.TakeOff.Desc>Take off {0} from yourself</AnomaliesExpected.Speedometer.TakeOff.Desc>
+	<AnomaliesExpected.Speedometer.TakeOffEarly>Forcefully remove {0}?\nWill cause chrono coma for {1}.</AnomaliesExpected.Speedometer.TakeOffEarly>
+	<AnomaliesExpected.Speedometer.TakeOffEarly.Label>Forcefully remove</AnomaliesExpected.Speedometer.TakeOffEarly.Label>
+	<AnomaliesExpected.Speedometer.TakeOffEarly.Desc>Forcefully remove {0} before it connection with body can be severed. Can be safely take off in {1}.</AnomaliesExpected.Speedometer.TakeOffEarly.Desc>
 </LanguageData>
