--- a/Languages/Russian/DefInjected/ThingDefs/Items_Various.xml
+++ b/Languages/Russian/DefInjected/ThingDefs/Items_Various.xml
@@ -87,6 +87,7 @@
 	<AE_StudyNotepad.comps.Comp_StudyNotepad.guiLabelString>Выберите кто просмотрит это.</AE_StudyNotepad.comps.Comp_StudyNotepad.guiLabelString>
 	<AE_StudyNotepad.comps.Comp_StudyNotepad.jobString>просмотреть</AE_StudyNotepad.comps.Comp_StudyNotepad.jobString>
 	<AE_StudyNotepad.comps.Comp_StudyNotepad.onCooldownString>восстанавливается</AE_StudyNotepad.comps.Comp_StudyNotepad.onCooldownString>
+	<AE_StudyNotepad.comps.Comp_StudyNotepad.messageCooldownEnded>Жёлтый блокнот можно использовать снова.</AE_StudyNotepad.comps.Comp_StudyNotepad.messageCooldownEnded>
 
 	<AE_StudyNotepad.comps.CompAEStudyUnlocks.studyNotes.0.label>#1/2 Отчет об исследовании жёлтого блокнота</AE_StudyNotepad.comps.CompAEStudyUnlocks.studyNotes.0.label>
 	<AE_StudyNotepad.comps.CompAEStudyUnlocks.studyNotes.0.AnomalyDesc>Обычный на вид блокнот с желтыми страницами, заполненными рукописными заметками.\n\nЕго страницы можно просмотреть для получения информации об интересующей теме.\n\nКлассифицируется как аномалия класса 0 (Безопасность).</AE_StudyNotepad.comps.CompAEStudyUnlocks.studyNotes.0.AnomalyDesc>
@@ -129,6 +130,7 @@
 	<AE_ChristmasStockings.comps.Comp_ChristmasStockings.guiLabelString>Выберите кто вытащит из этого</AE_ChristmasStockings.comps.Comp_ChristmasStockings.guiLabelString>
 	<AE_ChristmasStockings.comps.Comp_ChristmasStockings.jobString>вытащить подарок изнутри</AE_ChristmasStockings.comps.Comp_ChristmasStockings.jobString>
 	<AE_ChristmasStockings.comps.Comp_ChristmasStockings.onCooldownString>подготавливается</AE_ChristmasStockings.comps.Comp_ChristmasStockings.onCooldownString>
+	<AE_ChristmasStockings.comps.Comp_StudyNotepad.messageCooldownEnded>Красный носок можно использовать снова.</AE_ChristmasStockings.comps.Comp_StudyNotepad.messageCooldownEnded>
 
 	<AE_ChristmasStockings.comps.CompAEStudyUnlocks.studyNotes.0.label>#1/3 Отчет об исследовании красного носка</AE_ChristmasStockings.comps.CompAEStudyUnlocks.studyNotes.0.label>
 	<AE_ChristmasStockings.comps.CompAEStudyUnlocks.studyNotes.0.AnomalyDesc>Ярко-красный носок с белыми частями и символом снежинки.\n\nВы можете извлечь подарки изнутри.\n\nКлассифицируется как аномалия Класс-0 (Безопасность).</AE_ChristmasStockings.comps.CompAEStudyUnlocks.studyNotes.0.AnomalyDesc>
@@ -161,6 +163,7 @@
 	<AE_Speedometer.comps.Comp_Speedometer.guiLabelString>Выберите кто вживит это себе.</AE_Speedometer.comps.Comp_Speedometer.guiLabelString>
 	<AE_Speedometer.comps.Comp_Speedometer.jobString>вживить</AE_Speedometer.comps.Comp_Speedometer.jobString>
 	<AE_Speedometer.comps.Comp_Speedometer.onCooldownString>перенастройка</AE_Speedometer.comps.Comp_Speedometer.onCooldownString>
+	<AE_Speedometer.comps.Comp_StudyNotepad.messageCooldownEnded>Спидометр можно использовать снова.</AE_Speedometer.comps.Comp_StudyNotepad.messageCooldownEnded>
 
 	<AE_Speedometer.comps.CompAEStudyUnlocks.studyNotes.0.label>#1/1 Отчет об исследовании спидометра</AE_Speedometer.comps.CompAEStudyUnlocks.studyNotes.0.label>
 	<AE_Speedometer.comps.CompAEStudyUnlocks.studyNotes.0.AnomalyDesc>Тёмный круглый прибор с выцветшими цифрами, обозначающими деления до шести. Тонкая красная стрелка покоится вблизи нижнего края шкалы, намекая на механизм, предназначенный для измерения какой-либо скорости или величины.\n\nCпособен сливаться с плотью.\n\nКлассифицируется как аномалия Класс-0 (Безопасность).</AE_Speedometer.comps.CompAEStudyUnlocks.studyNotes.0.AnomalyDesc>
