--- a/Languages/Russian/DefInjected/HediffDef/Hediffs_AE_BodyPart.xml
+++ b/Languages/Russian/DefInjected/HediffDef/Hediffs_AE_BodyPart.xml
@@ -27,5 +27,11 @@
 	<AESnowCoreImplant.label>имплантат с ледяным ядром</AESnowCoreImplant.label>
 	<AESnowCoreImplant.description>Установленный аномальный имплантат, повторяющий ледяное ядро Снежной Армии, позволяет носителю выживать при пониженных температурах. Наноразмерные фроститы вызывают кристаллизацию клеток при ранении, ускоряя регенерацию при пониженных температурах. Однако эта кристаллизация делает клетки уязвимыми к высоким температурам, дестабилизируя их структуру. Тело носителя также понижает температуру окружающего воздуха.\n\nПолучает двойной урон от огня.\nМаксимальный эффект при -100 градусах, включая регенерацию отсутствующих частей.</AESnowCoreImplant.description>
 	<AESnowCoreImplant.labelNoun>имплантат с ледяным ядром</AESnowCoreImplant.labelNoun>
+	
+	<AESnowCoreImplantHidden.label>имплантат с ледяным ядром</AESnowCoreImplantHidden.label>
+	<AESnowCoreImplantHidden.description>Установленный замёрзший имплантат позволяет носителю выживать при пониженных температурах. Что-то вызывает кристаллизацию клеток при ранении, ускоряя регенерацию при пониженных температурах. Однако эта кристаллизация делает клетки уязвимыми к высоким температурам, дестабилизируя их структуру. Тело носителя также понижает температуру окружающего воздуха.\n\nПолучает двойной урон от огня.\nМаксимальный эффект при -100 градусах\nПозволяет регенерацию отсутствующих частей после -50 градусов.</AESnowCoreImplantHidden.description>
+	<AESnowCoreImplantHidden.labelNoun>имплантат с ледяным ядром</AESnowCoreImplantHidden.labelNoun>
+	<AESnowCoreImplantHidden.comps.HediffComp_SurgeryInspectable.surgicalDetectionDesc>Обнаружено образование похожее на имплант с ледяным ядром в теле субъекта.</AESnowCoreImplantHidden.comps.HediffComp_SurgeryInspectable.surgicalDetectionDesc>
+	
   
 </LanguageData>
