--- a/Languages/Russian/Keyed/Mod.xml
+++ b/Languages/Russian/Keyed/Mod.xml
@@ -13,6 +13,8 @@
 	<AnomaliesExpected.Settings.BloodLake.UndergroundFleshmassNestFrequencyMult>Установить множитель на количество времени между генерируемыми биошматами в гнёздах {0}</AnomaliesExpected.Settings.BloodLake.UndergroundFleshmassNestFrequencyMult>
 	<AnomaliesExpected.Settings.BloodLake.BloodLakeSubMapMaxSize>Установить ограничитель на максимальный размер гененрируемой Озером карты на {0}x{0} (по умолчанию использует тот же размер что и карта колонии)\n(Размер влияет на количество лута, врагов и на требуемые ресурся компьютера)</AnomaliesExpected.Settings.BloodLake.BloodLakeSubMapMaxSize>
 	
+	<AnomaliesExpected.Settings.Patch.VoidProvactionCooldown>Установить паузу между ритуалами воззвания к пустоте в {0} часов (по умолчанию 120ч) [Вступает в силу при запуске игры]</AnomaliesExpected.Settings.Patch.VoidProvactionCooldown>
+	
 	<AnomaliesExpected.Settings.ResearchTab.Unlock>Попытаться разблокировать Anomalies Expected исследовательские проекты</AnomaliesExpected.Settings.ResearchTab.Unlock>
 	
 	<AnomaliesExpected.Settings.DevMode.Info>Показывать дополнительную информации для отладки</AnomaliesExpected.Settings.DevMode.Info>
